manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: testimage 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testimage 
    spec:
      containers:
        - name: testimage 
          image: cloudorbit.azurecr.io/testimage
          ports:
          - containerPort: 5000
