manifests/app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: python-app
  labels:
    name: python-app
spec:
  replicas: 1
  minReadySeconds: 60
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: python-app
    spec:
      containers:
      - name: test
        image: cloudorbit.azurecr.io/pythonapp
        imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: python-app
spec:
  selector:
    name: python-app
  ports:
  - name: port1
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
