manifests/service.yml
kind: Service
apiVersion: v1
metadata:
  name: python-app
spec:
  selector:
    name: python-app
  ports:
  - name: port1
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
